# geonames_postcode

./: .gitignore  .readthedocs.yaml  CHANGES  MANIFEST.in  README.rst  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst
geonames_postcode/: __init__.py  fetch.ini  fetch.py
geonames_postcode/data/: template
